ZIndex 1000 and out of bounds bug fixed

--- a/style/style.module.scss
+++ b/style/style.module.scss
@@ -7,6 +7,7 @@
     // min-width: 50px;
     // min-height: 200px;
     // background: red;
+    z-index: 1000;
 
 }
 .div__BubbleScrollBar {
